Add analysis and reduction candidate docs
Added detailed section analysis and content reduction candidate lists for the Java book. These documents support planning and streamlining the manuscript by identifying key sections, their importance, and potential areas for content trimming.